# redbandana

./: Cargo.toml  README.md
examples/: client.js  client.ts
src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs  processor2.rs  utils.rs
src/circuits/: private_transfer.rs
src/src/: error.rs  state.rs
src/zk/: groth16_circuit.rs  mod.rs  stark.rs
tests/: integration.rs  integrationmainzk.rs
